--- a/css/css.scss
+++ b/css/css.scss
@@ -4,41 +4,42 @@
  # SETTINGS
 /*---------------------------------------*/
 :root {
-    --blue: #007bff;
-    --indigo: #6610f2;
-    --purple: #6f42c1;
-    --pink: #e83e8c;
-    --red: #dc3545;
-    --orange: #fd7e14;
-    --yellow: #ffc107;
-    --green: #28a745;
-    --teal: #20c997;
-    --cyan: #17a2b8;
-    --white: #fff;
-    --gray: #6c757d;
-    --gray-dark: #343a40;
-    --primary: #007bff;
-    --secondary: #6c757d;
-    --success: #28a745;
-    --info: #17a2b8;
-    --warning: #ffc107;
-    --danger: #dc3545;
-    --light: #f8f9fa;
-    --dark: #343a40;
-    --breakpoint-xs: 0;
-    --breakpoint-sm: 576px;
-    --breakpoint-md: 768px;
-    --breakpoint-lg: 992px;
-    --breakpoint-xl: 1200px;
-    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  }
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #6c757d;
+  --gray-dark: #343a40;
+  --primary: #007bff;
+  --secondary: #6c757d;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
 
 $color-dark-pink: #a75b69;
 $color-white: #fff;
 $color-pink: #0062cc;
 $color-dark-blue: lightblue;
-$color-orange: #F88767;
+$color-orange: #f88767;
 $spacing-default: 2rem;
 $gap-nav: 2rem;
 $gap-phone: 2rem;
@@ -76,8 +77,8 @@ p {
   font-weight: 400;
 }
 
-footer{
-    background-color: lightblue;
+footer {
+  background-color: lightblue;
 }
 
 /*---------------------------------------/*
@@ -90,14 +91,12 @@ footer{
   padding-left: 1rem;
   padding-right: 1rem;
 }
-  
-
 
 /*---------------------------------------/*
  # COMPONENTS
 /*---------------------------------------*/
-.nav{
-    background: lightblue;
+.nav {
+  background: lightblue;
 }
 .c-nav {
   display: flex;
@@ -150,8 +149,8 @@ footer{
     margin-bottom: 1rem;
     margin-top: 1.5rem;
   }
-  
-  &__container{
+
+  &__container {
     background-color: rgba(255, 255, 255, 0.7);
     border-radius: 0.5rem;
     padding: 0.5rem;
@@ -171,7 +170,6 @@ footer{
       &:hover {
         background-color: rgba(255, 255, 255, 0.7);
         color: $color-dark-pink;
-
       }
     }
   }
@@ -184,23 +182,54 @@ footer{
     padding: 0.5rem 1rem;
     font-size: 0.8rem;
     border-radius: 0.5rem 0 0 0;
-
   }
 }
 
-.c-skills{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
+.c-skills {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 
-    &__title{
-        font-size: 2rem;
-        margin-top: 1rem;
-        text-align: center;
-        flex-basis: 100%;
-        border-bottom: 1px solid $color-orange;
+  &__title {
+    font-size: 2rem;
+    margin-top: 1rem;
+    text-align: center;
+    flex-basis: 100%;
+    border-bottom: 1px solid $color-orange;
+  }
+}
 
-    }
+
+.c-timeline {
+  &__title {
+    font-size: 2rem;
+    margin-top: 1rem;
+    text-align: center;
+    flex-basis: 100%;
+    border-bottom: 1px solid $color-orange;
+  }
+}
+
+.c-timeline-article{
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  background-color: $color-dark-blue;
+  padding: 1rem;
+  border-radius: 1rem;
+
+  &__title{
+    text-align: center;
+    font-size: 1.5rem;
+    border-bottom: 1px dotted black;
+  }
+
+  &__text{
+    text-align: center;
+  }
+
+  &__div{
+    margin-bottom: 1.5rem;
+  }
 }
 
 .c-article {
@@ -208,23 +237,19 @@ footer{
   margin-bottom: 1rem;
   background-color: $color-dark-blue;
   border-radius: 1rem;
-  flex-basis: calc((100% / 4) - ( 1rem * 3 / 4));
+  flex-basis: calc((100% / 4) - (1rem * 3 / 4));
   padding: 1rem;
 
   @media (max-width: 1200px) {
-    flex-basis: calc((100% / 3) - ( 1rem * 2 / 3));
+    flex-basis: calc((100% / 3) - (1rem * 2 / 3));
   }
 
   @media (max-width: 992px) {
-    flex-basis: calc((100% / 2) - ( 1rem * 1 / 2));
+    flex-basis: calc((100% / 2) - (1rem * 1 / 2));
   }
 
   @media (max-width: 576px) {
     flex-basis: calc((100% / 1));
-  }
-
-  &--midle {
-    flex-direction: row-reverse;
   }
 
   &__title {
@@ -238,20 +263,19 @@ footer{
   &-links {
     display: flex;
     justify-content: space-around;
-    &__link{
-        color: $color-white;
-        font-weight: bold;
-        text-decoration: none;
-        background-color: $color-dark-pink;
-        padding: 0.5rem 1rem 0.5rem 1rem;
-        border-radius: 0.5rem;
-        border: 2px solid $color-dark-pink;
-  
-        &:hover {
-          background-color: rgba(255, 255, 255, 0.3);
-          color: $color-dark-pink;
-  
-        }
+    &__link {
+      color: $color-white;
+      font-weight: bold;
+      text-decoration: none;
+      background-color: $color-dark-pink;
+      padding: 0.5rem 1rem 0.5rem 1rem;
+      border-radius: 0.5rem;
+      border: 2px solid $color-dark-pink;
+
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.3);
+        color: $color-dark-pink;
+      }
     }
   }
 }
@@ -305,4 +329,3 @@ footer{
 /*---------------------------------------/*
  # UTILITIES
 /*---------------------------------------*/
-
