--- a/css/css.scss
+++ b/css/css.scss
@@ -201,6 +201,9 @@ footer {
 
 
 .c-timeline {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 60rem;
   &__title {
     font-size: 2rem;
     margin-top: 1rem;
