--- a/css/css.css
+++ b/css/css.css
@@ -93,6 +93,27 @@ footer {
   background: lightblue;
 }
 
+.c-top-btn {
+  padding: 0.5rem;
+  font-size: 1rem;
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  background-color: lightblue;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+}
+@media (max-width: 768px) {
+  .c-top-btn {
+    right: 10px;
+    bottom: 10px;
+  }
+}
+.c-top-btn a {
+  text-decoration: none;
+  color: black;
+}
+
 .c-nav {
   display: flex;
   justify-content: space-between;
@@ -111,6 +132,12 @@ footer {
   display: flex;
   align-items: center;
   gap: 4rem;
+}
+@media (max-width: 576px) {
+  .c-nav__list {
+    flex-basis: 50%;
+    gap: 2rem;
+  }
 }
 .c-nav__link {
   color: #a75b69;
@@ -241,6 +268,35 @@ footer {
 .c-article__text {
   font-size: 1rem;
   margin-bottom: 1rem;
+}
+.c-article-linksc {
+  display: flex;
+  justify-content: space-around;
+}
+@media (max-width: 768px) {
+  .c-article-linksc {
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+  }
+}
+.c-article-linksc__linkc {
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  background-color: #a75b69;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: 2px solid #a75b69;
+}
+.c-article-linksc__linkc:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #a75b69;
+}
+@media (max-width: 768px) {
+  .c-article-linksc__linkc {
+    width: 75%;
+  }
 }
 .c-article-links {
   display: flex;
