--- a/css/css.scss
+++ b/css/css.scss
@@ -98,6 +98,27 @@ footer {
 .nav {
   background: lightblue;
 }
+.c-top-btn{
+  padding: 0.5rem;
+  font-size: 1rem;
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  background-color: $color-dark-blue;
+  border: 1px solid black;
+  border-radius: .5rem;
+
+  @media (max-width: 768px) {
+    right: 10px;
+    bottom: 10px;
+  }
+  
+
+  a{
+    text-decoration: none;
+    color: black;
+  }
+}
 .c-nav {
   display: flex;
   justify-content: space-between;
@@ -115,6 +136,11 @@ footer {
     display: flex;
     align-items: center;
     gap: calc($gap-nav * 2);
+
+    @media (max-width: 576px) {
+      flex-basis: 50%;
+      gap: $gap-nav;
+    }
   }
 
   &__link {
@@ -122,6 +148,7 @@ footer {
     font-size: 1rem;
     text-decoration: none;
     transition: 0.3s;
+
 
     &:hover,
     &--active {
@@ -260,6 +287,39 @@ footer {
     font-size: 1rem;
     margin-bottom: 1rem;
   }
+
+  &-linksc{
+    display: flex;
+    justify-content: space-around;
+
+    @media (max-width: 768px) {
+       flex-direction: column;
+       gap: 1rem;
+        align-items: center;
+    }
+    
+
+    &__linkc{
+      color: $color-white;
+      font-weight: bold;
+      text-decoration: none;
+      background-color: $color-dark-pink;
+      padding: 0.5rem 1rem 0.5rem 1rem;
+      border-radius: 0.5rem;
+      border: 2px solid $color-dark-pink;
+
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.3);
+        color: $color-dark-pink;
+      }
+
+      @media (max-width: 768px) {
+        width: 75%;
+      }
+      
+    }
+
+  }
   &-links {
     display: flex;
     justify-content: space-around;
@@ -276,7 +336,9 @@ footer {
         background-color: rgba(255, 255, 255, 0.3);
         color: $color-dark-pink;
       }
+
     }
+
   }
 }
 
